respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code_2c__c</fullName>
        <label>ISO_Code_2c</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iso_Code__c</fullName>
        <label>Iso Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_email__c</fullName>
        <label>Planner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plaza_Planner_Piloto__c</fullName>
        <label>Plaza Planner Piloto</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Zone__c</fullName>
        <formula>IF(ISBLANK( Name ), &quot;None&quot;,

CASE(Name, &quot;Campeche&quot;, &quot;Centro&quot;, &quot;Chiapas&quot;, &quot;Centro&quot;, &quot;Ciudad de Mexico&quot;, &quot;Centro&quot;, &quot;Edo. Mexico&quot;, &quot;Centro&quot;, &quot;Guerrero&quot;, &quot;Centro&quot;, &quot;Hidalgo&quot;, &quot;Centro&quot;, &quot;Morelos&quot;, &quot;Centro&quot;, &quot;Oaxaca&quot;, &quot;Centro&quot;, &quot;Puebla&quot;, &quot;Centro&quot;, &quot;Quintana Roo&quot;, &quot;Centro&quot;, &quot;Tabasco&quot;, &quot;Centro&quot;, &quot;Tlaxcala&quot;, &quot;Centro&quot;, &quot;Veracruz&quot;, &quot;Centro&quot;, &quot;Yucatan&quot;, &quot;Centro&quot;,

CASE(Name, &quot;Coahuila&quot;, &quot;Noreste&quot;, &quot;Durango&quot;, &quot;Noreste&quot;, &quot;Nuevo Leon&quot;, &quot;Noreste&quot;, &quot;Tamaulipas&quot;, &quot;Noreste&quot;,

CASE(Name, &quot;Aguascalientes&quot;, &quot;Occidente&quot;, &quot;Colima&quot;, &quot;Occidente&quot;, &quot;Guanajuato&quot;, &quot;Occidente&quot;, &quot;Jalisco&quot;, &quot;Occidente&quot;, &quot;Michoacan de Ocampo&quot;, &quot;Occidente&quot;, &quot;Nayarit&quot;, &quot;Occidente&quot;, &quot;Queretaro&quot;, &quot;Occidente&quot;, &quot;San Luis Potosi&quot;, &quot;Occidente&quot;, &quot;Sinaloa&quot;, &quot;Occidente&quot;, &quot;Zacatecas&quot;, &quot;Occidente&quot;,

CASE(Name, &quot;Baja California&quot;, &quot;Noroeste&quot;, &quot;Baja California Sur&quot;, &quot;Noroeste&quot;, &quot;Chihuahua&quot;, &quot;Noroeste&quot;, &quot;Sonora&quot;, &quot;Noroeste&quot;,

&quot;Otro&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Planner_email__c</fullName>
        <label>Planner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Noreste</fullName>
                </value>
                <value>
                    <fullName>Occidente</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
                <value>
                    <fullName>Noroeste</fullName>
                </value>
                <value>
                    <fullName>Bajio</fullName>
                </value>
                <value>
                    <fullName>Norte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Iso_Code__c</columns>
        <columns>ISO_Code_2c__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Zone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>